# rust_axum_sqlx_tutorial

./: .env  .gitignore  Cargo.toml  ReadMe.md
migrations/: 20240607074824_create_submissions_table.sql
src/: main.rs
templates/: form.html  success.html
