[package]
name = "axum_x_sqlx_practice"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.4", features = ["postgres", "macros", "runtime-tokio-rustls"] }